@@ -3,7 +3,7 @@
 /*
   Part of the Processing project - http://processing.org
 
-  Copyright (c) 2012-17 The Processing Foundation
+  Copyright (c) 2012-19 The Processing Foundation
   Copyright (c) 2004-12 Ben Fry and Casey Reas
   Copyright (c) 2001-04 Massachusetts Institute of Technology
 
@@ -56,9 +56,9 @@ import processing.data.StringList;
 public class Base {
   // Added accessors for 0218 because the UpdateCheck class was not properly
   // updating the values, due to javac inlining the static final values.
-  static private final int REVISION = 264;
+  static private final int REVISION = 270;
   /** This might be replaced by main() if there's a lib/version.txt file. */
-  static private String VERSION_NAME = "0264"; //$NON-NLS-1$
+  static private String VERSION_NAME = "0270"; //$NON-NLS-1$
   /** Set true if this a proper release rather than a numbered revision. */
 
   /**
@@ -116,9 +116,31 @@ public class Base {
         public void run() {
           try {
             createAndShowGUI(args);
+
           } catch (Throwable t) {
-            Messages.showTrace("It was not meant to be",
-                               "A serious problem happened during startup. Please report:\n" +
+            // Windows Defender has been insisting on destroying each new
+            // release by removing core.jar and other files. Yay!
+            // https://github.com/processing/processing/issues/5537
+            if (Platform.isWindows()) {
+              String mess = t.getMessage();
+              String missing = null;
+              if (mess.contains("Could not initialize class com.sun.jna.Native")) {
+                missing = "jnidispatch.dll";
+              } else if (mess.contains("NoClassDefFoundError: processing/core/PApplet")) {
+                missing = "core.jar";
+              }
+              if (missing != null) {
+                Messages.showError("Necessary files are missing",
+                                   "A file required by Processing (" + missing + ") is missing.\n\n" +
+                                   "Make sure that you're not trying to run Processing from inside\n" +
+                                   "the .zip file you downloaded, and check that Windows Defender\n" +
+                                   "hasn't removed files from the Processing folder.\n\n" +
+                                   "(It sometimes flags parts of Processing as a trojan or virus.\n" +
+                                   "It is neither, but Microsoft has ignored our pleas for help.)", t);
+              }
+            }
+            Messages.showTrace("Unknown Problem",
+                               "A serious error happened during startup. Please report:\n" +
                                "http://github.com/processing/processing/issues/new", t, true);
           }
         }
@@ -179,6 +201,7 @@ public class Base {
 
       boolean sketchbookPrompt = false;
       if (Preferences.getBoolean("welcome.show")) {
+        // only ask once about split sketchbooks
         if (!Preferences.getBoolean("welcome.seen")) {
           // Check if there's a 2.0 sketchbook present
           String oldPath = Preferences.getOldSketchbookPath();
@@ -189,9 +212,9 @@ public class Base {
               sketchbookPrompt = true;
 
             } else if (oldPath.equals(newPath)) {
-              // If both exist and are identical, then the user has been using
-              // alpha releases of 3.x and needs to be warned about the larger
-              // changes in this release.
+              // If both exist and are identical, then the user has used
+              // pre-releases of 3.x and needs to be warned about the
+              // larger changes in this release.
               sketchbookPrompt = true;
             }
           }
@@ -712,7 +735,8 @@ public class Base {
   protected void initInternalTool(String className) {
     try {
       Class<?> toolClass = Class.forName(className);
-      final Tool tool = (Tool) toolClass.newInstance();
+      final Tool tool = (Tool)
+        toolClass.getDeclaredConstructor().newInstance();
 
       tool.init(this);
       internalTools.add(tool);
@@ -1675,6 +1699,15 @@ public class Base {
       return false;  // let's not go there
     }
 
+    if (folder.getName().equals("sdk")) {
+      // This could be Android's SDK folder. Let's double check:
+      File suspectSDKPath = new File(folder.getParent(), folder.getName());
+      File expectedSDKPath = new File(sketchbookFolder, "android" + File.separator + "sdk");
+      if (expectedSDKPath.getAbsolutePath().equals(suspectSDKPath.getAbsolutePath())) {
+        return false;  // Most likely the SDK folder, skip it
+      }
+    }
+
     String[] list = folder.list();
     // If a bad folder or unreadable or whatever, this will come back null
     if (list == null) {
@@ -1886,8 +1919,10 @@ public class Base {
         }
       }
     } catch (Exception e) {
-      Messages.showError("Problem getting the settings folder",
-                         "Error getting the Processing the settings folder.", e);
+      Messages.showTrace("An rare and unknowable thing happened",
+                         "Could not get the settings folder. Please report:\n" +
+                         "http://github.com/processing/processing/issues/new",
+                         e, true);
     }
     return settingsFolder;
   }
